--- a/src/screens/less/notes.module.less
+++ b/src/screens/less/notes.module.less
@@ -1,45 +1,99 @@
 .container{
     width: 100vw;
     height: 100vh;
-    background-image: url('../../assets/images/notesBg.webp');
-    background-size: cover;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;  
-    overflow-y: scroll;
-    .btnContainer{
+    overflow: scroll;
+    .plusIcon{
+        position: fixed;
+        bottom: 2em;
+        right: 3em;
+        width: 2.5em;
+        border-radius: 2em;
+        padding: .3em;
+        background-color: #d79ffced;
+    }
+    .themeChanger{
+        position: fixed;
+        top: 2em;
+        right: 3em;
+        width: 2em;
+        border: 1px solid;
+        border-radius: 2em;
+        background-color: white;
+    }
+    .noteListContainer{
+        display: flex;
+        flex-wrap: wrap;
+        .note{
+            background-color: #d79ffced;
+            opacity: 1;
+            max-width: 15em;
+            max-height: 10em;
+            padding: .5em;
+            margin: 1em;
+            border-radius: 1em;
+            display: flex;
+            flex-direction: column;
+            justify-content: space-between;
+            .content{
+                max-height: 80%;    
+                overflow: hidden;
+                display: flex;
+                flex-direction: column;
+                a, p{
+                    margin: .2em;
+                }
+                .imgContainer{
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    flex-wrap: wrap;
+                    img{
+                        width: 3em;
+                        margin: .3em;
+                    }
+                }
+            }
+            .actionContainer{
+                width: 95%;
+                padding: .4em;
+                display: flex;
+                justify-content: end;
+                gap: .2em;
+                img{
+                    width: 1.2em;
+                    cursor: pointer;
+                }
+            }
+        }
+    }
+    .modalContainer{
+        position: absolute;
+        top: 0;
         display: flex;
         justify-content: center;
         align-items: center;
-        gap: 1.5em;
-        border: 2px solid black;
-        border-radius: 1em;
-        padding: 1em;
-        background-color: rgb(255, 255, 255);
-        cursor: pointer;
-        transition: transform 0.2s ease;
-        margin-top: 2em;
+        background-color: rgba(52, 52, 52, 0.559);
+        width: 100%;
+        height: 100%;
+    }
+}
+.font{
+    position: fixed;
+    top: 0;
+    z-index: -1;
+    svg{
+        width: 100vw;
+        height: 100vh;
+    }
+}
 
-        .btnContent{
-            font-size: 2em;
-            margin: 0 !important;
-        }
-        .btnIcon{
-            width: 2em;
-        }
-    }
-    .btnContainer:hover{
-        transform: scale(1.2);
-    }
-    .themeIconWrapper{
-        position: absolute;
-        top: 2em;
-        right: 3em;
-        .themeIcon{
-            width: 2.5em;
-            border-radius: 1em;
-            cursor: pointer;
-        }
-    }
+.container::-webkit-scrollbar {
+    width: .5em;
+    margin: 1em;
+}
+
+.container::-webkit-scrollbar-thumb {
+    background: rgb(0, 217, 255);
+    border-radius: 10px;
+    cursor: pointer;
 }
