--- a/src/components/less/noteModal.module.less
+++ b/src/components/less/noteModal.module.less
@@ -40,6 +40,9 @@
             width: 98%;
             height: 20em;
         }
+        h1{
+            margin: 0 0 0.5em;
+        }
 
         .actionContainer {
             padding-top: 1.3em;
